# echec-imac-2026

imgui-template-main/: CMakeLists.txt
imgui-template-main/shaders/: 3D.fs.glsl  3D.vs.glsl  skybox.fs.glsl  skybox.vs.glsl
imgui-template-main/src/: MainJeu2D.txt  main.cpp
imgui-template-main/src/2D/: chessUI.cpp
imgui-template-main/src/design/: AnimationManager.hpp  BoardRenderer.hpp  Cube.cpp  Cube.hpp  PieceRenderer.hpp  Programs.hpp  Shader.hpp  Shape.hpp  Sphere.cpp  TrackballCamera.hpp  chessUI.cpp  chessUI.hpp
imgui-template-main/src/design/core/: Cubemap.hpp  PieceCamera.hpp  Programs.hpp  Renderer.hpp  Texture.hpp  TrackballCamera.hpp  stb_image.cpp
imgui-template-main/src/design/geometry/: Cube.cpp  Sphere.cpp  Sphere.hpp
imgui-template-main/src/design/renderer/: AnimationManager.hpp  BoardRenderer.hpp  PieceRenderer.hpp  SkyboxRenderer.hpp
imgui-template-main/src/gameplay/: board.cpp  board.hpp
imgui-template-main/src/logic/: basic_move_check.cpp  basic_move_check.hpp  bishop.cpp  bishop.hpp  chessboard.cpp  chessboard.hpp  king.cpp  king.hpp  knight.cpp  knight.hpp  pawn.cpp  pawn.hpp  piece.hpp  queen.cpp  queen.hpp  rook.cpp  rook.hpp
